--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <script src="contextmenu.js"></script>
     <script>
-        createContextmenu('body', [
+        createContextmenu(document.body, [
             {},
             {
                 'text': 'This is just an example',
@@ -44,7 +44,16 @@
                     {
                         'text': 'larger than window height!'
                     },
-                    {},{},{},{},{},{},{},{},{},{},{},{},{},{},{},{},{},{},{},{},{},{},{},{},{},{},{},{},{},{},{},{},{},{},{},{},{},{},{},{},{},{},{},{},{},{},{},{},{},{},{},{},{},{},{},{},{},{},{},{},{},{},{},{},{},{},
+                    {},{},{},{},{},{},{},
+                    {},{},{},{},{},{},{},
+                    {},{},{},{},{},{},{},
+                    {},{},{},{},{},{},{},
+                    {},{},{},{},{},{},{},
+                    {},{},{},{},{},{},{},
+                    {},{},{},{},{},{},{},
+                    {},{},{},{},{},{},{},
+                    {},{},{},{},{},{},{},
+                    {},{},{},{},{},{},{}  //text of empty items default to "text"
                 ]
             },
             {
@@ -53,21 +62,45 @@
                     {
                         'text': 'larger than half of window height!'
                     },
-                    {},{},{},{},{},{},{},{},{},{},{},{},{},{},{},
+                    {},{},{},{},{},{},{},
+                    {},{},{},{},{},{},{},{},
                     {
                         'sub': [
-                            {},{},{
-                                'sub': [{},{},{}]
-                            },
-                            {},{},{
+                            {},
+                            {},
+                            {
                                 'sub': [
-                                    {},{},{
+                                    {},
+                                    {},
+                                    {}
+                                ]
+                            },
+                            {},
+                            {},
+                            {
+                                'sub': [
+                                    {},
+                                    {},
+                                    {
                                         'sub': [
-                                            {},{},{},{},{},{},{
+                                            {},
+                                            {},
+                                            {},
+                                            {},
+                                            {},
+                                            {},
+                                            {
                                                 'sub':[
-                                                    {},{},{},{},{},{},
+                                                    {},
+                                                    {},
+                                                    {},
+                                                    {},
+                                                    {},
+                                                    {},
                                                 ]
-                                            },{},{},
+                                            },
+                                            {},
+                                            {},
                                         ]
                                     }
                                 ]
